[package]
name = "grid_search_cardinal_best"
description = "Search algorithm for finding the shortest path to the best cell in a uniform-cost cardinal grid"
version = "0.3.1"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
homepage = "https://github.com/gridbugs/grid-search.git"
repository = "https://github.com/gridbugs/grid-search.git"
documentation = "https://docs.rs/grid_search_cardinal_best"
readme = "README.md"
edition = "2018"

[features]
serialize = ["serde", "coord_2d/serialize", "grid_search_cardinal_common/serialize"]

[dependencies]
grid_search_cardinal_common = { version = "0.3", path = "../cardinal-common" }
coord_2d = "0.3"
direction = "0.18"
serde = { version = "1.0", features = ["serde_derive"], optional = true }

[dev-dependencies]
grid_2d = "0.15"
coord_2d = { version = "0.3", features = ["rand"] }
rand = "0.8"
rand_isaac = "0.3"
