[package]
name = "grid_search_cardinal_common"
description = "Reusable components for use implementing uniform-cost cardinal grid-searching algorithms"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
homepage = "https://github.com/stevebob/grid-search.git"
repository = "https://github.com/stevebob/grid-search.git"
documentation = "https://docs.rs/grid_search_cardinal_common"
readme = "README.md"
edition = "2018"

[features]
serialize = ["serde", "grid_2d/serialize", "direction/serialize"]

[dependencies]
grid_2d = "0.14"
direction = "0.17"
serde = { version = "1.0", features = ["serde_derive"], optional = true }
