[package]
name = "grid_search_cardinal_distance_map"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2018"

[features]
serialize = ["serde", "grid_2d/serialize"]

[dependencies]
grid_search_cardinal_common = { version = "0.1", path = "../cardinal-common" }
grid_2d = "0.14"
direction = "0.17"
serde = { version = "1.0", features = ["serde_derive"], optional = true }
