[package]
name = "grid_search_cardinal_distance_map"
description = "Grid where each cell stores the distance from a set of interesting points to each cell in a uniform-cost cardinal grid"
version = "0.2.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
homepage = "https://github.com/stevebob/grid-search.git"
repository = "https://github.com/stevebob/grid-search.git"
documentation = "https://docs.rs/grid_search_cardinal_distance_map"
readme = "README.md"
edition = "2018"

[features]
serialize = ["serde", "grid_2d/serialize", "grid_search_cardinal_common/serialize"]

[dependencies]
grid_search_cardinal_common = { version = "0.2", path = "../cardinal-common" }
grid_2d = "0.14"
direction = "0.17"
serde = { version = "1.0", features = ["serde_derive"], optional = true }
