[package]
name = "grid_search_cardinal_point_to_point"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2018"

[features]
serialize = ["serde", "coord_2d/serialize"]

[dependencies]
grid_search_cardinal_common = { version = "0.1", path = "../cardinal-common" }
coord_2d = "0.2"
direction = "0.17"
serde = { version = "1.0", features = ["serde_derive"], optional = true }

[dev-dependencies]
grid_2d = "0.14"
coord_2d = { version = "0.2", features = ["rand"] }
criterion = "0.3"
grid_search_maze = { version = "0.1", path = "../maze" }
rand = "0.7"
rand_isaac = "0.2"

[[bench]]
name = "bench"
harness = false
