[package]
name = "grid_search_cardinal_point_to_point"
description = "Search algorithm for finding the shortest path between two points in a uniform-cost cardinal grid"
version = "0.2.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
homepage = "https://github.com/stevebob/grid-search.git"
repository = "https://github.com/stevebob/grid-search.git"
documentation = "https://docs.rs/grid_search_cardinal_point_to_point"
readme = "README.md"
edition = "2018"

[features]
serialize = ["serde", "coord_2d/serialize", "grid_search_cardinal_common/serialize"]

[dependencies]
grid_search_cardinal_common = { version = "0.2", path = "../cardinal-common" }
coord_2d = "0.2"
direction = "0.17"
serde = { version = "1.0", features = ["serde_derive"], optional = true }

[dev-dependencies]
grid_2d = "0.14"
coord_2d = { version = "0.2", features = ["rand"] }
criterion = "0.3"
grid_search_maze = { version = "0.1", path = "../maze" }
rand = "0.8"
rand_isaac = "0.3"

[[bench]]
name = "bench"
harness = false
