[package]
name = "grid_search_cardinal"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2018"

[dependencies]
grid_search_cardinal_best = { version = "0.1", path = "../cardinal-best" }
grid_search_cardinal_point_to_point = { version = "0.1", path = "../cardinal-point-to-point" }
grid_search_cardinal_distance_map = { version = "0.1", path = "../cardinal-distance-map" }
