[package]
name = "grid_search_cardinal"
description = "Collection of search algorithms for uniform-cost cardinal grids"
version = "0.1.1"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
homepage = "https://github.com/stevebob/grid-search.git"
repository = "https://github.com/stevebob/grid-search.git"
documentation = "https://docs.rs/grid_search_cardinal"
readme = "README.md"
edition = "2018"

[features]
serialize = [
    "grid_search_cardinal_best/serialize",
    "grid_search_cardinal_point_to_point/serialize",
    "grid_search_cardinal_distance_map/serialize",
]

[dependencies]
grid_search_cardinal_best = { version = "0.1", path = "../cardinal-best" }
grid_search_cardinal_point_to_point = { version = "0.1", path = "../cardinal-point-to-point" }
grid_search_cardinal_distance_map = { version = "0.1", path = "../cardinal-distance-map" }
