[package]
name = "grid_search_maze"
description = "Maze generator for testing and benchmarking grid-searching algorithms"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
homepage = "https://github.com/stevebob/grid-search.git"
repository = "https://github.com/stevebob/grid-search.git"
documentation = "https://docs.rs/grid_search_maze"
readme = "README.md"
edition = "2018"

[dependencies]
grid_2d = "0.14"
rand = "0.7"
rand_isaac = { version = "0.2", features = ["serde1"] }
