[package]
name = "grid_search_maze"
description = "Maze generator for testing and benchmarking grid-searching algorithms"
version = "0.2.1"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
homepage = "https://github.com/gridbugs/grid-search.git"
repository = "https://github.com/gridbugs/grid-search.git"
documentation = "https://docs.rs/grid_search_maze"
readme = "README.md"
edition = "2021"

[dependencies]
grid_2d = "0.15"
rand = "0.8"
rand_isaac = { version = "0.3", features = ["serde1"] }
